Fixed hover bug on mobile

--- a/src/styles/components/_travel.scss
+++ b/src/styles/components/_travel.scss
@@ -8,19 +8,26 @@
 
 .travel__card{
     position: relative;
-
+    -webkit-transition: all 1s ease; /* Safari and Chrome */
+    -moz-transition: all 1s ease; /* Firefox */
+    -ms-transition: all 1s ease; /* IE 9 */
+    -o-transition: all 1s ease; /* Opera */
+    transition: all 1s ease;
 }
 
 .travel__card-overlay{
     position: absolute;
-    width: 100%;
     height: 100%;
+    width: 100%;
     background-color: black;
     opacity: 0;
+    transition: 1s ease;
+    display: none;
 }
 
 .travel__card:hover .travel__card-overlay{
     opacity: 0.7;
+    display: block;
 }
 
 .travel__card:hover .travel__card-text{
